// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextEditor snapshots block failed to load, Toast is shown 1`] = `
<EditorContainer
  getContent={
    {
      "getContent": {
        "assets": {
          "sOmEaSsET": {
            "staTICUrl": "/assets/sOmEaSsET",
          },
        },
        "editorRef": {
          "current": {
            "value": "something",
          },
        },
        "isRaw": false,
      },
    }
  }
  onClose={[MockFunction props.onClose]}
  returnFunction={null}
>
  <div
    className="editor-body h-75 overflow-auto"
  >
    <Toast
      onClose={[MockFunction hooks.nullMethod]}
      show={true}
    >
      <FormattedMessage
        defaultMessage="Error: Could Not Load Text Content"
        description="Error Message Dispayed When HTML content fails to Load"
        id="authoring.texteditor.load.error"
      />
    </Toast>
    <[object Object]
      editorContentHtml="eDiTablE Text"
      editorRef={
        {
          "current": {
            "value": "something",
          },
        }
      }
      editorType="text"
      height="100%"
      initializeEditor={[MockFunction args.intializeEditor]}
      minHeight={500}
      setEditorRef={[MockFunction hooks.prepareEditorRef.setEditorRef]}
    />
  </div>
</EditorContainer>
`;

exports[`TextEditor snapshots loaded, raw editor 1`] = `
<EditorContainer
  getContent={
    {
      "getContent": {
        "assets": {
          "sOmEaSsET": {
            "staTICUrl": "/assets/sOmEaSsET",
          },
        },
        "editorRef": {
          "current": {
            "value": "something",
          },
        },
        "isRaw": true,
      },
    }
  }
  onClose={[MockFunction props.onClose]}
  returnFunction={null}
>
  <div
    className="editor-body h-75 overflow-auto"
  >
    <Toast
      onClose={[MockFunction hooks.nullMethod]}
      show={false}
    >
      <FormattedMessage
        defaultMessage="Error: Could Not Load Text Content"
        description="Error Message Dispayed When HTML content fails to Load"
        id="authoring.texteditor.load.error"
      />
    </Toast>
    <RawEditor
      content={
        {
          "data": {
            "data": "eDiTablE Text",
          },
        }
      }
      editorRef={
        {
          "current": {
            "value": "something",
          },
        }
      }
      lang="html"
    />
  </div>
</EditorContainer>
`;

exports[`TextEditor snapshots not yet loaded, Spinner appears 1`] = `
<EditorContainer
  getContent={
    {
      "getContent": {
        "assets": {
          "sOmEaSsET": {
            "staTICUrl": "/assets/sOmEaSsET",
          },
        },
        "editorRef": {
          "current": {
            "value": "something",
          },
        },
        "isRaw": false,
      },
    }
  }
  onClose={[MockFunction props.onClose]}
  returnFunction={null}
>
  <div
    className="editor-body h-75 overflow-auto"
  >
    <Toast
      onClose={[MockFunction hooks.nullMethod]}
      show={false}
    >
      <FormattedMessage
        defaultMessage="Error: Could Not Load Text Content"
        description="Error Message Dispayed When HTML content fails to Load"
        id="authoring.texteditor.load.error"
      />
    </Toast>
    <div
      className="text-center p-6"
    >
      <Spinner
        animation="border"
        className="m-3"
        screenreadertext="loading"
      />
    </div>
  </div>
</EditorContainer>
`;

exports[`TextEditor snapshots renders as expected with default behavior 1`] = `
<EditorContainer
  getContent={
    {
      "getContent": {
        "assets": {
          "sOmEaSsET": {
            "staTICUrl": "/assets/sOmEaSsET",
          },
        },
        "editorRef": {
          "current": {
            "value": "something",
          },
        },
        "isRaw": false,
      },
    }
  }
  onClose={[MockFunction props.onClose]}
  returnFunction={null}
>
  <div
    className="editor-body h-75 overflow-auto"
  >
    <Toast
      onClose={[MockFunction hooks.nullMethod]}
      show={false}
    >
      <FormattedMessage
        defaultMessage="Error: Could Not Load Text Content"
        description="Error Message Dispayed When HTML content fails to Load"
        id="authoring.texteditor.load.error"
      />
    </Toast>
    <[object Object]
      editorContentHtml="eDiTablE Text"
      editorRef={
        {
          "current": {
            "value": "something",
          },
        }
      }
      editorType="text"
      height="100%"
      initializeEditor={[MockFunction args.intializeEditor]}
      minHeight={500}
      setEditorRef={[MockFunction hooks.prepareEditorRef.setEditorRef]}
    />
  </div>
</EditorContainer>
`;
